linux stuff on page cache, mainly

--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,7 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 \include{ocfa/step5/results}
 \include{ocfa/conclussions}
 \include{ocfa/scriptsreference}
+\include{linux/linux}
 \end{appendices}
 
 \end{document}
