--- a/ocfa/conclussions.tex
+++ b/ocfa/conclussions.tex
@@ -52,7 +52,7 @@ From the analysis of the timing information from four real life OCFA runs, and o
 \item The un-throttled input of new data into the system creates an imbalance between inflow and outflow that leads to much higher amount's of \emph{active} data than can be accounted for by disk cache, inevitably leading to massive amounts of disk cache misses. A form of throttling for new data submission is a necessity for effectively addressing disk cache efficiency.
 \item The percentage of data that is discarded after a file-type check is significant when compared to the percentage of data that is discarded after a hash value check. It would seem logical to design a new system in such a way that file-type checking happens before the file is actually read by the framework, as to remove unneeded overhead from reading the file data, either to copy it out or to determine the file hash. This seems one argument in favor of opportunistic hashing. 
 \item When looking at the chain of modules that processes particular data, its not uncommon for the first full read to be the result of the on-creation hashing, while the second and often last full read happens in the last module before the (in OCFA) meta-data-only Data Store Module. This means that if hashing could be delayed to a later module, that while the entity processing time may stay approximately the same, the disk-cache hit probability could improve resulting from the reduced first full-read last full-read timing. 
-\item The percentage of data that constitutes large entities without anyway meaningful hash value (such as whole partitions or unallocated space cluster collections) makes up a majority of all data processed. Traversing such large data chunks for the sole purpose of calculating a set of hashes, as is done in the OCFA architecture is wasteful. This seems a second argument in favor of opportunistic hashing.
+\item The percentage of data that constitutes large entities without in anyway meaningful hash value (such as whole partitions or unallocated space cluster collections) makes up a majority of all data processed. Traversing such large data chunks for the sole purpose of calculating a set of hashes, as is done in the OCFA architecture is wasteful. This seems a second argument in favor of opportunistic hashing.
 \item The percentage of larger data that is processed that is a chunk of other data being processed is significant. This implies that the disk cache size requirements could be reduced by making extensive use of annotation based addressing such as in CarvFS.
 \end{itemize}
 So basically, from a disk-cache efficiency viewpoints, we are proposing three distinct yet interdependent measures:
