--- a/ocfa/intro.tex
+++ b/ocfa/intro.tex
@@ -27,7 +27,7 @@ The main strategy applied by OCFA in order to improve the throughput of the over
 The XML Blobs created and extended by the OCFA modules don't contain just per-job meta-data. They are also used to store profiling information listing the start time and stop time of every module with a one second granularity.  These XML blobs are all stored in the Postgress database that is used as central component in the OCFA infrastructure. From this profiling information it should be possible to extract some basic statistics that should proof useful in analyzing and evaluating the disk-cache-miss likelihood and possibly come up with the most suitable remedies for improving upon these.
 \section{Analysis of the OCFA timing information}
 \subsection{Extracting the timing information}
-The Dutch National Police made a set of database dumps from old OCFA runs available for use in this study. One important prerequisite however was that the sensitive investigative data could under no circumstances become part of the scientific research. In order to adhere to these preconditions, a Python script was created to parse the database dumps and to extract only those parts of the data that were essential for \emph{technical} evaluation related to timing. In theory this information should be sufficient to base our research and evaluations on, yet it is possible that a better foundation of our findings would be possible when including non-directly timing related information. The python script as included in a following appendix did the following:
+The Dutch National Police made a set of database dumps from old OCFA runs available for use in this study. One important prerequisite however was that the sensitive investigative data could under no circumstances become part of the scientific research. In order to adhere to these preconditions, a Python script was created to parse the database dumps and to extract only those parts of the data that were essential for \emph{technical} evaluation related to timing. In theory this information should be sufficient to base our research and evaluations on, yet it is possible that a better foundation of our findings would be possible when including non-directly timing related information. The python script as referenced in a following appendix did the following:
 \begin{itemize}
 \item Extract the evidence XML Blob's from the SQL dump.
 \item Extract the oldest timestamp from the XML blobs and use that time as offset for the successive steps.
