some grammer and an outline for new appendix

--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \\[20pt]
 { \large \bfseries \myauthor}\\[0.3cm]
 \HRule \\[1.5cm]
-A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfield with the supervision of Dr. \mysupervisor.
+A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfield  under the supervision of Dr. \mysupervisor.
 \\[10cm]
 {\large \myschool}\\[12pt]
 {\large \myuniversity}\\[12pt]
@@ -57,6 +57,7 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 \include{ocfa/conclussions}
 \include{ocfa/scriptsreference}
 \include{linux/linux}
+\include{MattockFS/mattockfs}
 \end{appendices}
 
 \end{document}
