added mattock architecture graphics

--- a/main.tex
+++ b/main.tex
@@ -57,6 +57,7 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 \include{ocfa/conclussions}
 \include{ocfa/scriptsreference}
 \include{linux/linux}
+\include{mattock/mattock}
 \include{MattockFS/mattockfs}
 \end{appendices}
 
