--- a/conf.tex
+++ b/conf.tex
@@ -1,4 +1,4 @@
-\def \mymaintitle {Storage annotations, opportunistic hashing \& throttling}
+\def \mymaintitle {MatockFS}
 \def \mysubtitle {Minimizing disk-cache misses in an asynchronous message-based forensic framework on the Linux platform.}
 \def \myauthor {Rob J Meijer}
 \def \mysupervisor {Dr Pavel Gladishev} 
