start at moving hashes stuff to other appendix

--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,10 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 \include{ocfa/conclussions}
 \include{ocfa/scriptsreference}
 \include{linux/linux}
+\include{mattock/hash}
+\include{mattock/ocfa}
 \include{mattock/mattock}
+\include{mattock/other}
 \include{MattockFS/mattockfs}
 \end{appendices}
 
