more complete hashing appendix

--- a/main.tex
+++ b/main.tex
@@ -39,15 +39,15 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 {\large \today}
 \vfill
 \end{titlepage}
-%\include{ucd-tex-template/abstract}
+\include{ucd-tex-template/abstract}
 \tableofcontents
-%\include{ucd-tex-template/introduction}
-%\include{ucd-tex-template/literature}
-%\include{ucd-tex-template/problem}
-%\include{ucd-tex-template/approach}
-%\include{ucd-tex-template/results}
-%\include{ucd-tex-template/evaluation}
-%\include{ucd-tex-template/references}
+\include{ucd-tex-template/introduction}
+\include{ucd-tex-template/literature}
+\include{ucd-tex-template/problem}
+\include{ucd-tex-template/approach}
+\include{ucd-tex-template/results}
+\include{ucd-tex-template/evaluation}
+\include{ucd-tex-template/references}
 \begin{appendices}
 \include{ocfa/intro}
 \include{ocfa/step2/results}
